--- a/index.html
+++ b/index.html
@@ -21,72 +21,72 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Separate business/personal</td>	
-                    <td>✔</td>
+                <tr class="table__primeiralinha">
+                    <td class="table__primeiracoluna" >Separate business/personal</td>	
+                    <td class="table__marker-blue" >✔</td>
                     <td></td>
                     <td></td>
                     <td></td>
                 </tr>
                 
                 <tr>
-                    <td>Estimate tax payment</td>
-                    <td>✔</td>
+                    <td class="table__primeiracoluna">Estimate tax payment</td>
+                    <td class="table__marker-blue" >✔</td>
                     <td></td>
                     <td></td>
                     <td></td>
                 </tr>
 
                 <tr>
-                    <td>Track deductible mileage</td>
-                    <td>✔</td>
+                    <td class="table__primeiracoluna">Track deductible mileage</td>
+                    <td class="table__marker-blue">✔</td>
                     <td></td>
                     <td></td>
                     <td></td>
                 </tr>
 
                 <tr>
-                    <td>Download online banking</td>
-                    <td>✔</td>
-                    <td>✔</td>
-                    <td>✔</td>
-                    <td>✔</td>
+                    <td class="table__primeiracoluna">Download online banking</td>
+                    <td class="table__marker-blue">✔</td>
+                    <td class="table__marker-green">✔</td>
+                    <td class="table__marker-green">✔</td>
+                    <td class="table__marker-green">✔</td>
                 </tr>
 
                 <tr>
-                    <td>Multi-device</td>
-                    <td>✔</td>
-                    <td>✔</td>
-                    <td>✔</td>
-                    <td>✔</td>
+                    <td class="table__primeiracoluna">Multi-device</td>
+                    <td class="table__marker-blue">✔</td>
+                    <td class="table__marker-green">✔</td>
+                    <td class="table__marker-green">✔</td>
+                    <td class="table__marker-green">✔</td>
                 </tr>
 
                 <tr>
-                <td>Create invoices & estimates</td>
+                <td class="table__primeiracoluna">Create invoices & estimates</td>
                 <td></td>
-                <td>✔</td>
-                <td>✔</td>
-                <td>✔</td>
+                <td class="table__marker-green">✔</td>
+                <td class="table__marker-green">✔</td>
+                <td class="table__marker-green">✔</td>
                 </tr>
 
                 <tr>
-                <td>Manage VAT</td>
+                <td class="table__primeiracoluna">Manage VAT</td>
                 <td></td>
-                <td>✔</td>
-                <td>✔</td>
-                <td>✔</td>
+                <td class="table__marker-green">✔</td>
+                <td class="table__marker-green">✔</td>
+                <td class="table__marker-green">✔</td>
                 </tr>
 
                 <tr>
-                <td>Run Payroll</td>
+                <td class="table__primeiracoluna">Run Payroll</td>
                 <td></td>
-                <td>✔</td>
-                <td>✔</td>
-                <td>✔</td>
+                <td class="table__marker-green">✔</td>
+                <td class="table__marker-green">✔</td>
+                <td class="table__marker-green">✔</td>
                 </tr>
 
                 <tr>
-                <td>Number of users</td>
+                <td class="table__primeiracoluna">Number of users</td>
                 <td>1 user</td>
                 <td>1 user</td>
                 <td>3 users</td>
